--- a/public/index.html
+++ b/public/index.html
@@ -47,12 +47,13 @@
 
       var Comment = React.createClass({
         render: function(){
+          var rawMarkup = marked(this.props.children.toString(), {sanitize: true});
           return (
             <div className="Comment">
               <h2 className="commentAuthor">
                 {this.props.author}
               </h2>
-              {marked(this.props.children.toString())}
+              <span dangerouslySetInnerHTML={{__html: rawMarkup}} />
             </div>
           );
         }
