--- a/public/index.html
+++ b/public/index.html
@@ -10,57 +10,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/jsx">
-
-      var CommentBox = React.createClass({
-        render: function(){
-          return (
-            <div className="commentBox">
-              <h1>Comments</h1>
-              <CommentList />
-              <CommentForm />
-            </div>
-          );
-        }
-      });
-
-      var CommentList = React.createClass({
-        render: function(){
-          return (
-            <div className="CommentList">
-              <Comment author="Pete Hunt">This is one comment</Comment>
-              <Comment author="Jordan Walke">This is *another* comment</Comment>
-            </div>
-          );
-        }
-      });
-
-      var CommentForm = React.createClass({
-        render: function(){
-          return (
-            <div className="CommentForm">
-              Hello, World!  I am a CommentForm.
-            </div>
-          );
-        }
-      });
-
-      var Comment = React.createClass({
-        render: function(){
-          var rawMarkup = marked(this.props.children.toString(), {sanitize: true});
-          return (
-            <div className="Comment">
-              <h2 className="commentAuthor">
-                {this.props.author}
-              </h2>
-              <span dangerouslySetInnerHTML={{__html: rawMarkup}} />
-            </div>
-          );
-        }
-      });
-
-      React.render(<CommentBox />, document.getElementById('content'));
-
-    </script>
+    <script type="text/jsx" src="app.js"></script>
   </body>
 </html>
